--- a/index.html
+++ b/index.html
@@ -125,12 +125,12 @@
     <div class="box-container">
 
         <div class="box">
-            <span class="price"> $5 - $20 </span>
+            <span class="price"> 60rs - 70rs </span>
             
             <img src="images/p-1.jpg" alt="">
           </a>
 
-            <h3>AR Quick Look</h3>
+            <h3>Mini Waffle</h3>
             <div class="stars">
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
