--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 
 <header>
 
-    <a href="#" class="logo"><i class="fas fa-utensils"></i>food</a>
+    <a href="#" class="logo">
+        <img src="images/logo copy.png" alt=""></i>Conical Gaufers</a>
 
     <div id="menu-bar" class="fas fa-bars"></div>
 
@@ -386,7 +387,7 @@
 
 <section class="order" id="order">
 
-    <h1 class="heading"> <span>order</span> now </h1>
+    <h1 class="heading"> <span>Rate Your</span> Store Partner </h1>
 
     <div class="row">
         
@@ -398,17 +399,20 @@
 
             <div class="inputBox">
                 <input type="text" placeholder="name">
-                <input type="email" placeholder="email">
-            </div>
-
-            <div class="inputBox">
                 <input type="number" placeholder="number">
-                <input type="text" placeholder="food name">
             </div>
-
+            <div class="list">
+                <label for="PartnerName">Choose a store partner:</label>
+                <select name="PartnerName" id="PartnerName">
+                    <option value="Mohammad shaikh">Mohammad Shaikh</option>
+                    <option value="Fiza Shaikh">Fiza Shaikh</option>
+                    <option value="Shubham Sonawane">Shubham Sonawane</option>
+                    <option value="Ajay Panichker">Ajay Panichker</option>
+                </select>
+            </div>
             <textarea placeholder="address" name="" id="" cols="30" rows="10"></textarea>
 
-            <input type="submit" value="order now" class="btn">
+            <input type="submit" value="Rate Now" class="btn">
             
 
         </form>
@@ -426,12 +430,11 @@
     <div class="share">
         <a href="#" class="btn">facebook</a>
         <a href="#" class="btn">twitter</a>
-        <a href="#" class="btn">instagram</a>
-        <a href="#" class="btn">pinterest</a>
+        <a href="https://www.instagram.com/conicalgaufres/" class="btn">instagram</a>
         <a href="#" class="btn">linkedin</a>
     </div>
 
-    <h1 class="credit"> created by <span> mr. web designer </span> | all rights reserved! </h1>
+    <h1 class="credit"> created by <span> XR App & Web  </span> | all rights reserved! </h1>
 
 </section>
 
