--- a/index.html
+++ b/index.html
@@ -140,14 +140,7 @@
                 <i class="far fa-star"></i>
             </div>
             <a >
-                <model-viewer
-                    src="ar/Burger.fbx"
-                    ios-src="ar/fender_stratocaster.usdz"
-                    ar auto-rotate camera-controls background-color="#2EAFAC">
-                    <a class="btn">View Model</a>
-                    <a href="ar/Burger.fbx">Avocado</a>
-                </model-viewer>
-            <!--<a href="ar/fender_stratocaster.usdz" rel="ar" class="btn">View Model</a>-->
+            <a href="ar/fender_stratocaster.usdz" rel="ar" class="btn">View Model</a>
         </div>
         <div class="box">
             <span class="price"> $5 - $20 </span>
