--- a/index.html
+++ b/index.html
@@ -130,7 +130,8 @@
             <model-viewer
             src="ar/BurgerBun.glb"
             ios-src="ar/fender_stratocaster.usdz"
-            ar auto-rotate camera-controls background-color="#2EAFAC">
+            ar auto-rotate camera-controls background-color="#2EAFAC"
+            camera-controls touch-action="pan-y" >
             </model-viewer>
             <span class="price"> 60rs - 70rs </span>
           </a>
