--- a/index.html
+++ b/index.html
@@ -127,12 +127,13 @@
         
         <div class="box">
             
-            <model-viewer
+            <!--<model-viewer
             src="ar/BurgerBun.glb"
             ios-src="ar/fender_stratocaster.usdz"
             ar auto-rotate camera-controls background-color="#2EAFAC"
             camera-controls touch-action="pan-y" >
-            </model-viewer>
+            </model-viewer>-->
+            <img src="images/p-1.jpg" alt="">
             <span class="price"> 60rs - 70rs </span>
           </a>
 
