--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 <i class="far fa-star"></i>
             </div>
             <a >
-            <a href="" rel="ar" class="btn">View Model</a>
+            <a href="ar/fender_stratocaster.usdz" rel="ar" class="btn">View Model</a>
         </div>
         <div class="box">
             <span class="price"> $5 - $20 </span>
