--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <a href="#home">home</a>
         <!--<a href="#speciality">speciality</a>-->
         <a href="#popular">popular</a>
-        <!--<a href="#gallery">gallery</a>
+        <!--real<a href="#gallery">gallery</a>
         <a href="#review">review</a>-->
         <a href="#order">review</a>
     </nav>
@@ -127,6 +127,7 @@
 
         <div class="box">
             <model-viewer alt=""
+            with-credentials = true
             src="ar/BurgerBun.glb"
             ios-src="ar/fender_stratocaster.usdz"
             ar auto-rotate camera-controls background-color="#2EAFAC">
