--- a/index.html
+++ b/index.html
@@ -126,12 +126,15 @@
     <div class="box-container">
 
         <div class="box">
-            <model-viewer alt=""
+            <model-viewer class="View3D"></model-viewer>
+            <!--<model-viewer alt=""
             with-credentials = true
+            webxr scene-viewer
+            quick-look
             src="ar/BurgerBun.glb"
             ios-src="ar/fender_stratocaster.usdz"
             ar auto-rotate camera-controls background-color="#2EAFAC">
-            </model-viewer>
+            </model-viewer>-->
             <span class="price"> 60rs - 70rs </span>
           </a>
 
