--- a/index.html
+++ b/index.html
@@ -128,12 +128,13 @@
         <div class="box">
             <model-viewer alt=""
             with-credentials = true
-            webxr scene-viewer
-            quick-look
+            webxr = false 
+            scene-viewer 
+            quick-look 
             canonicalWebPageURL="https://mohammadshaireefshaikh.github.io/DemoARQuickLook.github.io/"
             src="ar/BurgerBun.glb"
             ios-src="ar/fender_stratocaster.usdz"
-            ar auto-rotate camera-controls background-color="#2EAFAC">
+             auto-rotate camera-controls background-color="#2EAFAC">
             </model-viewer>
             <span class="price"> 60rs - 70rs </span>
           </a>
