--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             canonicalWebPageURL="https://mohammadshaireefshaikh.github.io/DemoARQuickLook.github.io/"
             src="ar/BurgerBun.glb"
             ios-src="ar/fender_stratocaster.usdz"
-             auto-rotate camera-controls background-color="#2EAFAC">
+            ar auto-rotate camera-controls background-color="#2EAFAC">
             </model-viewer>
             <span class="price"> 60rs - 70rs </span>
           </a>
