--- a/index2.html
+++ b/index2.html
@@ -20,8 +20,8 @@
             scene-viewer 
             quick-look 
             canonicalWebPageURL="https://mohammadshaireefshaikh.github.io/DemoARQuickLook.github.io/"
-            src="ar/BurgerBun.glb"
-            ios-src="ar/fender_stratocaster.usdz"
+            src="ar/AllInOne.glb"
+            ios-src="ar/AllInOne.usdz"
             ar auto-rotate camera-controls background-color="#2EAFAC">
      </model-viewer>
 <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
