--- a/index2.html
+++ b/index2.html
@@ -14,7 +14,7 @@
     
 </head>
 <body>
-    <model-viewer alt=""
+    <model-viewer class="boxForModel" alt=""
             with-credentials = true
             webxr = false 
             scene-viewer 
