--- a/index2.html
+++ b/index2.html
@@ -22,6 +22,7 @@
             canonicalWebPageURL="https://mohammadshaireefshaikh.github.io/DemoARQuickLook.github.io/"
             src="ar/AllInOne.glb"
             ios-src="ar/AllInOne.usdz"
+            default-progress-bar = true
             ar auto-rotate camera-controls background-color="#2EAFAC">
      </model-viewer>
 <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
