--- a/index2.html
+++ b/index2.html
@@ -14,6 +14,21 @@
     
 </head>
 <body>
+    <model-viewer alt="Neil Armstrong's Spacesuit from the Smithsonian Digitization Programs Office and National Air and Space Museum" src="ar/AllInOne.glb" ar="" environment-image="shared-assets/environments/moon_1k.hdr" poster="shared-assets/models/NeilArmstrong.webp" shadow-intensity="1" camera-controls="" touch-action="pan-y" data-js-focus-visible="" ar></model-viewer>
+<div class="container" style="width: 626px; height: 872px;">
+  <div class="userInput show" tabindex="0" role="img" aria-label="Neil Armstrong's Spacesuit from the Smithsonian Digitization Programs Office and National Air and Space Museum. Use mouse, touch or arrow keys to move." style="cursor: grab; touch-action: pan-y;">
+      <div class="slot canvas">
+        <slot name="canvas">
+          <canvas width="626" height="872" style="width: 626px; height: 872px;" class=""></canvas>
+        <canvas id="webgl-canvas" class="show" data-engine="three.js r146" width="626" height="872" style="width: 626px; height: 872px;"></canvas></slot>
+      </div>
+
+  </div>
+
+
+
+
+<!--
     <model-viewer class="boxForModel" alt=""
             with-credentials = true
             webxr = false 
@@ -24,8 +39,9 @@
             ios-src="ar/AllInOne.usdz"
             default-progress-bar = true
             ar auto-rotate camera-controls background-color="#2EAFAC">
-     </model-viewer>
+     </model-viewer>-->
 <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
 
 </body>
 </html>
+
