--- a/index2.html
+++ b/index2.html
@@ -14,7 +14,7 @@
     
 </head>
 <body>
-    <model-viewer alt="Neil Armstrong's Spacesuit from the Smithsonian Digitization Programs Office and National Air and Space Museum" src="ar/AllInOne.glb" ar="" environment-image="shared-assets/environments/moon_1k.hdr" poster="shared-assets/models/NeilArmstrong.webp" shadow-intensity="1" camera-controls="" touch-action="pan-y" data-js-focus-visible="" ar></model-viewer>
+    <model-viewer alt="Neil Armstrong's Spacesuit from the Smithsonian Digitization Programs Office and National Air and Space Museum" src="ar/AllInOne.glb" ar="" poster="images/waffle.jpg" shadow-intensity="1" camera-controls="" touch-action="pan-y" data-js-focus-visible="" ar></model-viewer>
 <div class="container" style="width: 626px; height: 872px;">
   <div class="userInput show" tabindex="0" role="img" aria-label="Neil Armstrong's Spacesuit from the Smithsonian Digitization Programs Office and National Air and Space Museum. Use mouse, touch or arrow keys to move." style="cursor: grab; touch-action: pan-y;">
       <div class="slot canvas">
