--- a/index2.html
+++ b/index2.html
@@ -14,18 +14,17 @@
     
 </head>
 <body>
-    <model-viewer  src="ar/AllInOne.glb" ar auto-rotate camera-controls background-color="#2EAFAC" touch-action="pan-y"></model-viewer>
-<div class="container" style="width: 626px; height: 872px;">
-  <div class="userInput show" tabindex="0" role="img" aria-label="Neil Armstrong's Spacesuit from the Smithsonian Digitization Programs Office and National Air and Space Museum. Use mouse, touch or arrow keys to move." style="cursor: grab; touch-action: pan-y;">
-      <div class="slot canvas">
-        <slot name="canvas">
-          <canvas width="626" height="872" style="width: 626px; height: 872px;" class=""></canvas>
-        <canvas id="webgl-canvas" class="show" data-engine="three.js r146" width="626" height="872" style="width: 626px; height: 872px;"></canvas></slot>
-      </div>
-
-  </div>
+<div id="demo-container" class="demo">
+<!-- Import the component -->
 
 
+<!-- Use it like any other HTML element -->
+<model-viewer src="ar/AllInOne.glb"
+            ios-src="ar/AllInOne.usdz"
+            default-progress-bar = true
+            ar auto-rotate camera-controls background-color="#2EAFAC" 
+            poster="images/waffle.jpg" touch-action="pan-y" ></model-viewer>
+                </div>
 
 
 <!--
@@ -44,4 +43,11 @@
 
 </body>
 </html>
+
+
+
+
+
+
+
 
