--- a/index2.html
+++ b/index2.html
@@ -13,7 +13,11 @@ margin: 0 auto;
 </style>
 </head>
 <body>
-<model-viewer src="ar/AllInOne.glb"></model-viewer>
+<model-viewer alt=""
+            src="ar/AllInOne.glb"
+            ios-src="ar/AllInOne.usdz"
+            ar auto-rotate background-color="#2EAFAC"
+            camera-controls touch-action="pan-y" disable-pan></model-viewer>
 </body>
 </html>
 
