--- a/index2.html
+++ b/index2.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="height=device-height ,width=device-width, initial-scale=1.0">
 <title>Model Viewer</title>
 <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.js"></script>
+<script src="js/script.js"></script>
 <style>
 model-viewer{
 max-width: 100%;
