--- a/index2.html
+++ b/index2.html
@@ -6,6 +6,12 @@
 <title>Model Viewer</title>
 <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.js"></script>
 <script src="js/script.js"></script>
+<style>
+model-viewer{
+max-width: 100%;
+max-height: 100%;
+margin: 0 auto;
+</style>
 </head>
 <body>
     <div class="demo">
