--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
 <section class="popular" id="popular">
 
-    <h1 class="heading"> most <span>popular</span> foods </h1>
+    <h1 class="heading"> most <span>popular</span> Waffles </h1>
 
     <div class="box-container">
 
@@ -138,43 +138,43 @@
           </a>
 
             <h3>Mini Waffle</h3>
-            <a href="index2.html" target="_blank" rel="ar" class="btn">View Model</a>
+            <a href="index2.html" target="_blank" rel="ar" class="btn">View in 3D</a>
         </div>
         <div class="box">
             <span class="price"> 70rs </span>
             <img src="images/p-1.jpg" alt="">
             <h3>Naughty Nutela</h3>
-            <a href="ar/AllInOne.usdz" rel="ar" class="btn">View Model</a>
+            <a href="index2.html" target="_blank" rel="ar" class="btn">View in 3D</a>
         </div>
         <div class="box">
             <span class="price"> 70rs </span>
             <img src="images/p-1.jpg" alt="">
             <h3>Kit-Kat Crunch</h3>
-            <a href="ar/AllInOne.usdz" rel="ar" class="btn">View Model</a>
+            <a href="index2.html" target="_blank" rel="ar" class="btn">View in 3D</a>
         </div>
         <div class="box">
             <span class="price"> 60rs </span>
             <img src="images/p-1.jpg" alt="">
             <h3>Oreo Fantasy</h3>
-            <a href="ar/AllInOne.usdz" rel="ar" class="btn">View Model</a>
+            <a href="index2.html" target="_blank" rel="ar" class="btn">View in 3D</a>
         </div>
         <div class="box">
             <span class="price"> 60rs </span>
             <img src="images/p-1.jpg" alt="">
             <h3>Milk chocolate fantasy</h3>
-            <a href="ar/AllInOne.usdz" rel="ar" class="btn">View Model</a>
+            <a href="index2.html" target="_blank" rel="ar" class="btn">View in 3D</a>
         </div>
         <div class="box">
             <span class="price"> 60rs </span>
             <img src="images/p-1.jpg" alt="">
             <h3>Dark chocolate fantasy</h3>
-            <a href="ar/AllInOne.usdz" rel="ar" class="btn">View Model</a>
+            <a href="index2.html" target="_blank" rel="ar" class="btn">View in 3D</a>
         </div>
          <div class="box">
             <span class="price"> 60rs </span>
             <img src="images/p-1.jpg" alt="">
             <h3>Oreo dark</h3>
-            <a href="ar/AllInOne.usdz" rel="ar" class="btn">View Model</a>
+            <a href="index2.html" target="_blank" rel="ar" class="btn">View in 3D</a>
 
         </div>
 
