--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </div>
 
     <div class="image">
-        <img src="images/BigImage.jpg" alt="">
+        <img src="images/FinalImg.png" alt="">
     </div>
 
 </section>
