--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                 <span class="price"> 70rs </span>
                 <img src="images/p-1.jpg" alt="">
                 <h3>Naughty Nutela</h3>
-                <a href="index2.html" target="_blank" rel="ar" class="btn">View in 3D</a>
+                <a href="index2.html" target="_blank" rel="ar" class="btn" onclick="loadNewModel('ar/AllInOne.glb','ar/AllInOne.usdz');">View in 3D</a>
             </div>
             <div class="box">
                 <span class="price"> 70rs </span>
@@ -179,45 +179,45 @@
                 <form action="index2.html" method="GET">
                     <input type="text" name="serialNumber" />
                 </form>
-                <a href="index2.html" target="_blank" rel="ar" class="btn">View in 3D</a>
+                <a href="index2.html" target="_blank" rel="ar" class="btn" onclick="loadNewModel('ar/AllInOne.glb','ar/AllInOne.usdz');">View in 3D</a>
             </div>
             <div class="box">
                 <span class="price"> 60rs </span>
                 <img src="images/Oreo Fantasy.jpeg" alt="">
                 <h3>Oreo Fantasy</h3>
-                <a href="index2.html" target="_blank" rel="ar" class="btn">View in 3D</a>
+                <a href="index2.html" target="_blank" rel="ar" class="btn" onclick="loadNewModel('ar/AllInOne.glb','ar/AllInOne.usdz');">View in 3D</a>
             </div>
             <div class="box">
                 <span class="price"> 60rs </span>
                 <img src="images/Milk and dark delight.jpeg" alt="">
                 <h3>Milk chocolate fantasy</h3>
-                <a href="index2.html" target="_blank" rel="ar" class="btn">View in 3D</a>
+                <a href="index2.html" target="_blank" rel="ar" class="btn" onclick="loadNewModel('ar/AllInOne.glb','ar/AllInOne.usdz');">View in 3D</a>
             </div>
             <div class="box">
                 <span class="price"> 60rs </span>
                 <img src="images/Tripple Chocolate.jpeg" alt="">
                 <h3>Triple chocolate </h3>
-                <a href="index2.html" target="_blank" rel="ar" class="btn">View in 3D</a>
+                <a href="index2.html" target="_blank" rel="ar" class="btn" onclick="loadNewModel('ar/AllInOne.glb','ar/AllInOne.usdz');">View in 3D</a>
             </div>
             <div class="box">
                 <span class="price"> 60rs </span>
                 <img src="images/p-1.jpg" alt="">
                 <h3>Oreo dark</h3>
-                <a href="index2.html" target="_blank" rel="ar" class="btn">View in 3D</a>
+                <a href="index2.html" target="_blank" rel="ar" class="btn" onclick="loadNewModel('ar/AllInOne.glb','ar/AllInOne.usdz');">View in 3D</a>
 
             </div>
             <div class="box">
                 <span class="price"> 140rs </span>
                 <img src="images/Cheeky Chocolate.jpeg" alt="">
                 <h3>Cheeky Chocolate</h3>
-                <a href="index2.html" target="_blank" rel="ar" class="btn">View in 3D</a>
+                <a href="index2.html" target="_blank" rel="ar" class="btn" onclick="loadNewModel('ar/AllInOne.glb','ar/AllInOne.usdz');">View in 3D</a>
 
             </div>
             <div class="box">
                 <span class="price"> 120rs </span>
                 <img src="images/Sprinkle.jpeg" alt="">
                 <h3> Chocolate waffle with Sprinkle</h3>
-                <a href="index2.html" target="_blank" rel="ar" class="btn">View in 3D</a>
+                <a href="index2.html" target="_blank" rel="ar" class="btn" onclick="loadNewModel('ar/AllInOne.glb','ar/AllInOne.usdz');">View in 3D</a>
 
             </div>
 
@@ -225,7 +225,7 @@
                 <span class="price"> 160rs </span>
                 <img src="images/Kit Kat.jpeg" alt="">
                 <h3> Kit-Kat Waffle</h3>
-                <a href="index2.html" target="_blank" rel="ar" class="btn">View in 3D</a>
+                <a href="index2.html" target="_blank" rel="ar" class="btn" onclick="loadNewModel('ar/AllInOne.glb','ar/AllInOne.usdz');">View in 3D</a>
 
             </div>
 
@@ -233,7 +233,7 @@
                 <span class="price"> 160rs </span>
                 <img src="images/Ultimate Oreo.jpeg" alt="">
                 <h3> Ultimate Oreo</h3>
-                <a href="index2.html" target="_blank" rel="ar" class="btn">View in 3D</a>
+                <a href="index2.html" target="_blank" rel="ar" class="btn" onclick="loadNewModel('ar/AllInOne.glb','ar/AllInOne.usdz');">View in 3D</a>
 
             </div>
 
@@ -241,7 +241,7 @@
                 <span class="price"> 140rs </span>
                 <img src="images/Caramel Delight.jpeg" alt="">
                 <h3> Caramel Delight</h3>
-                <a href="index2.html" target="_blank" rel="ar" class="btn">View in 3D</a>
+                <a href="index2.html" target="_blank" rel="ar" class="btn" onclick="loadNewModel('ar/AllInOne.glb','ar/AllInOne.usdz');">View in 3D</a>
 
             </div>
 
@@ -249,7 +249,7 @@
                 <span class="price"> 140rs </span>
                 <img src="images/Dark and Milk Fantasy.jpeg" alt="">
                 <h3> Dark and Milk Fantasy</h3>
-                <a href="index2.html" target="_blank" rel="ar" class="btn">View in 3D</a>
+                <a href="index2.html" target="_blank" rel="ar" class="btn" onclick="loadNewModel('ar/AllInOne.glb','ar/AllInOne.usdz');">View in 3D</a>
 
             </div>
 
@@ -257,7 +257,7 @@
                 <span class="price"> 140rs </span>
                 <img src="images/Dark and White Fantasy.jpeg" alt="">
                 <h3> Dark and White Fantasy</h3>
-                <a href="index2.html" target="_blank" rel="ar" class="btn">View in 3D</a>
+                <a href="index2.html" target="_blank" rel="ar" class="btn" onclick="loadNewModel('ar/AllInOne.glb','ar/AllInOne.usdz');">View in 3D</a>
 
             </div>
 
@@ -265,7 +265,7 @@
                 <span class="price"> 150rs </span>
                 <img src="images/Milky BAr.jpeg" alt="">
                 <h3> Milky Bar</h3>
-                <a href="index2.html" target="_blank" rel="ar" class="btn">View in 3D</a>
+                <a href="index2.html" target="_blank" rel="ar" class="btn" onclick="loadNewModel('ar/AllInOne.glb','ar/AllInOne.usdz');">View in 3D</a>
 
             </div>
 
@@ -273,7 +273,7 @@
                 <span class="price"> 140rs </span>
                 <img src="images/Oreo Cookie Crumbles.jpeg" alt="">
                 <h3> Oreo Cookie Crumble</h3>
-                <a href="index2.html" target="_blank" rel="ar" class="btn">View in 3D</a>
+                <a href="index2.html" target="_blank" rel="ar" class="btn" onclick="loadNewModel('ar/AllInOne.glb','ar/AllInOne.usdz');">View in 3D</a>
 
             </div>
     </section>
