--- a/index2.html
+++ b/index2.html
@@ -6,20 +6,32 @@
     <meta name="viewport" content="height=device-height ,width=device-width, initial-scale=1.0">
     <title>Model Viewer</title>
     <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.js"></script>
-    
+
     <style>
         model-viewer {
             max-width: 100%;
             max-height: 100%;
-            height: 600px;
-            width: 400px;
+            height: 1920px;
+            width: 1080px ;
             margin: 0 auto;
+        }
+        html,
+        body {
+            height: 100%;
+        }
+
+        #content,
+        .container-fluid,
+        .span9 {
+            border: 1px solid #000;
+            overflow-y: auto;
+            height: 100%;
         }
     </style>
 </head>
 
 <body>
-    <div class="demo">
+    <div class="container-fluid">
         <model-viewer id="model" alt="" src="" ios-src="" ar auto-rotate background-color="#2EAFAC" camera-controls
             touch-action="pan-y" disable-pan></model-viewer>
     </div>
