--- a/index.html
+++ b/index.html
@@ -484,8 +484,8 @@
                     <input for="Number" name="Number" type="number" placeholder="Number">
                 </div>
                 <div>
-                    <label class="list">Your store partner:</label>
-                    <input name="PartnerName" id="PartnerName" type="text" value="Store Partner Name"></input>
+                    <!--<label type = "hidden" class="list">Your store partner:</label>-->
+                    <input type = "hidden"name="PartnerName" id="PartnerName" type="text" value="Store Partner Name"></input>
                 </div>
 
                 <textarea for="Summary" placeholder="Feedback" name="Summary" id="" cols="30" rows="10"></textarea>
@@ -504,7 +504,7 @@
                     <input type="submit" value="Rate Now" class="btn">
                 </div>-->
                 <fieldset class="rating">
-                    <legend>Rate our product:</legend>
+                    <legend>Rate Your Store Partner:</legend>
                     <input type="radio" id="no-rate" class="input-no-rate" name="Rating" value="0" checked=""
                         aria-label="No rating.">
 
@@ -550,7 +550,7 @@
             <a href="#" class="btn">linkedin</a>
         </div>
 
-        <h1 class="credit"> created by <span> XR App & Web </span> | all rights reserved! </h1>
+        <h1 class="credit"> created by <span> Virtual Universo </span> | all rights reserved! </h1>
 
     </section>
 
