--- a/index.html
+++ b/index.html
@@ -153,26 +153,11 @@
         <div class="box-container">
 
             <div class="box">
-                <!--<model-viewer alt=""
-            src="ar/BurgerBun.glb"
-            ios-src="ar/fender_stratocaster.usdz"
-            ar auto-rotate camera-controls background-color="#2EAFAC">
-            </model-viewer>-->
-                <img src="images/p-1.jpg" alt="">
-                <span class="price"> 60rs </span>
-                </a>
-
-                <h3>Mini Waffle</h3>
-                <a target="_blank" rel="ar" class="btn" id="Mini waffle"
-                    onclick="loadNewModel('ar/AllInOne.glb','ar/AllInOne.usdz');">View
-                    in 3D</a>
-            </div>
-            <div class="box">
                 <span class="price"> 70rs </span>
                 <img src="images/p-1.jpg" alt="">
                 <h3>Naughty Nutela</h3>
                 <a href="index2.html" target="_blank" rel="ar" class="btn"
-                    onclick="loadNewModel('ar/AllInOne.glb','ar/AllInOne.usdz');">View in 3D</a>
+                    onclick="loadNewModel('ar/Naughty Nutella.glb','ar/Naughty Nutella.usdz');">View in 3D</a>
             </div>
             <div class="box">
                 <span class="price"> 70rs </span>
