--- a/index.html
+++ b/index.html
@@ -72,10 +72,12 @@
     </div>
 -->
         <div class="video">
-            <video controls autoplay muted>
+            <video controls muted id="videoToPlay" onload="playVid()">
                 <source src="images/video.mp4.mp4" type="video/mp4">
-            </video>
+            </video>-
+
         </div>
+
 
     </section>
 
@@ -470,7 +472,8 @@
                 </div>
                 <div>
                     <!--<label type = "hidden" class="list">Your store partner:</label>-->
-                    <input type = "hidden"name="PartnerName" id="PartnerName" type="text" value="Store Partner Name"></input>
+                    <input type="hidden" name="PartnerName" id="PartnerName" type="text"
+                        value="Store Partner Name"></input>
                 </div>
 
                 <textarea for="Summary" placeholder="Feedback" name="Summary" id="" cols="30" rows="10"></textarea>
@@ -530,9 +533,9 @@
 
         <div class="share">
             <a href="#" class="btn" id="facebook">facebook</a>
-            <a href="#" class="btn">twitter</a>
+            <!-- <a href="#" class="btn">twitter</a>-->
             <a href="https://www.instagram.com/conicalgaufres/" class="btn">instagram</a>
-            <a href="#" class="btn">linkedin</a>
+            <!-- <a href="#" class="btn">linkedin</a>-->
         </div>
 
         <h1 class="credit"> created by <span> Virtual Universo </span> | all rights reserved! </h1>
