--- a/index.html
+++ b/index.html
@@ -72,10 +72,13 @@
     </div>
 -->
         <div class="video">
-            <video controls muted id="videoToPlay" onload="playVid()">
+            <video id="videoToPlay" src="images/video.mp4.mp4"
+                controls="true" autoplay="autoplay" loop="true" muted defaultmuted playsinline >
+            </video>
+           <!-- <video controls muted id="videoToPlay" >
                 <source src="images/video.mp4.mp4" type="video/mp4">
-            </video>-
-
+            </video>-->
+            
         </div>
 
 
