--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                     <input type="text" name="serialNumber" />
                 </form>
                 <a href="index2.html" target="_blank" rel="ar" class="btn"
-                    onclick="loadNewModel('ar/AllInOne.glb','ar/AllInOne.usdz');">View in 3D</a>
+                    onclick="loadNewModel('ar/Kit-kat Crunch.glb','ar/Kit-kat Crunch.usdz');">View in 3D</a>
             </div>
             <div class="box">
                 <span class="price"> 60rs </span>
