--- a/index2.html
+++ b/index2.html
@@ -32,7 +32,7 @@
 
 <body>
     <div class="container-fluid">
-        <model-viewer id="model" alt="" src="" ios-src="" ar auto-rotate background-color="#2EAFAC" camera-controls
+        <model-viewer id="model" alt="" src="" ios-src="" ar auto-rotate background-color="#2EAFAC" camera-controls camera-orbit="10deg 45deg 3m"
             touch-action="pan-y" disable-pan></model-viewer>
     </div>
     <script src="js/script2.js"></script>
