--- a/index.html
+++ b/index.html
@@ -631,13 +631,13 @@
 
         <div class="box">
             <a href="#" class="btn" id="facebook">facebook</a>
-            <a href="images/conical guafres" class="btn" id="Franchise">Franchise</a>
+            <a href="pdf.html" class="btn" id="Franchise">Franchise</a>
             <!-- <a href="#" class="btn">twitter</a>-->
             <a href="https://www.instagram.com/conicalgaufres/" class="btn">instagram</a>
             <!-- <a href="#" class="btn">linkedin</a>-->
         </div>
 
-        <a class="credit"> created by <span > Virtual Universo </span> | all rights reserved! </a>
+        <a class="credit" href="https://mohammadshaikh.carrd.co/"> created by <span > Virtual Universo </span> | all rights reserved! </a>
 
     </section>
 
