--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 
         <h2 class="heading"> most <span>popular</span> Waffles </h2>
 
-        <div class="box-container">
+        <div class="box-container" id="img">
 
             <div class="box">
                 <span class="price"> 70rs </span>
